# image-gen-svc

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: pull_models.py
src/image_gen_svc/: __init__.py  __main__.py  app.py  config.py  default_registry.yml  downloads.py  inference.py  job_registry.py  model_registry.py  pipeline_registry.py
src/image_gen_svc/pipelines/: auraflow.py  base.py  chroma.py  mock.py  sdxl.py  z_image.py
src/image_gen_svc/routes/: events.py  health.py  models.py  render.py  version.py
tests/image_gen_svc/: conftest.py  test_auth.py  test_config.py  test_downloads.py  test_inference.py  test_job_registry.py  test_model_registry.py  test_pipeline_mock.py  test_pipeline_registry.py  test_routes_events.py  test_routes_health.py  test_routes_models.py  test_routes_render.py  test_routes_version.py  test_smoke.py  test_z_image_pipeline.py
tests/integration/: conftest.py  test_container_e2e.py  test_container_gpu_e2e.py
