[project]
name = "image-gen-svc"
version = "0.1.0"
description = "Local diffusers HTTP server with model registry and SSE progress."
requires-python = ">=3.11,<4.0"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.6,<3",
  "pyyaml>=6.0",
  "pillow>=12.2,<13",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "huggingface-hub>=0.24",
]

[tool.poetry]
packages = [{ include = "image_gen_svc", from = "src" }]
include = ["src/image_gen_svc/default_registry.yml"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
respx = ">=0.21"
asgi-lifespan = ">=2.1"
ruff = ">=0.6"
black = ">=24.0"
bandit = ">=1.7"
pip-audit = ">=2.7"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q -m 'not integration and not gpu'"
markers = [
  "integration: spins up the built container in mock mode; requires docker and IMAGE_GEN_SVC_IMAGE",
  "gpu: spins up the built container with --gpus all and a real model; requires NVIDIA host",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
